# merecat

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
crates/frisket/: Cargo.toml  README.md
crates/frisket/src/: layout.rs  lib.rs  projection.rs  store.rs  tearout.rs  tests.rs
design_docs/: 2026-07-08_merecat_founding.md  2026-07-10_merecat_architecture_plan.md  2026-07-14_merecat_rung5_panes_plan.md  2026-07-15_merecat_surfaces_in_cambium.md  2026-07-17_genet_probe_automatability_plan.md  2026-07-18_meerkat_harvest.md  2026-07-20_gloss_composite_pane.md  2026-07-20_recycle_bin_athanor.md
docs/: 2026-07-22_g3_graphshell_endpoint_receipt.md
docs/receipts/: g3_merecat_endpoint.html
scenarios/: denizen_b1.scn  denizen_fork.scn  denizen_wasm.scn  facet_fork.scn  facet_layout.scn  facet_layout_verify.scn  overmap.scn  overmap_composite.scn  overmap_o3.scn  proof1_projection.scn  proof3_physics_capability.scn  proof3_recency.scn  proof3_recency_verify.scn  rung3_chrome_cambium.scn  rung3_nav.scn  rung3_omnibar.scn  rung4_content.scn  rung4_settings.scn  rung4_settings_verify.scn  rung5_a11y.scn  rung5_content_input.scn  rung5_divergence.scn  rung5_divider.scn  rung5_gloss.scn  rung5_gloss_composite.scn  rung5_inspector.scn  rung5_panes.scn  rung5_panes_restore.scn  rung5_roster.scn  rung5_surfaces.scn  rung5_trail.scn  rung5_two_runners.scn  rung5_workbench.scn  rung5_workbench_restore.scn  rung6_delete_recover.scn  rung6_restore.scn  rung6_restore_verify.scn  rung6_session_labels.scn  rung6_sessions.scn  rung6_sessions_verify.scn  (+10 more)
scenarios/fixtures/: README.md  app_core_guest.wasm  trail_keeper.lua
src/: a11y.rs  action.rs  app.rs  apparatus_pane.rs  browse.rs  cambium_pane.rs  chrome_view.rs  component.rs  content.rs  denizen.rs  gloss_pane.rs  inspector_pane.rs  inspector_view.rs  lib.rs  main.rs  observe.rs  overmap.rs  overmap_pane.rs  pane.rs  pane_rows.rs  recycle.rs  remote_projection.rs  ring.rs  roster_view.rs  scenario.rs  script.rs  sections.rs  session.rs  shell.rs  surface.rs  swatch_pane.rs  trail_pane.rs  trail_view.rs  ui.rs  web.rs  workbench_pane.rs  workbench_tiling.rs
