[package]
name = "merecat"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The cat that lives on the mere: a graph-workspace browser and reference host for the mere library. Merecat is the English calque of meerkat (Dutch meer + kat, lake-cat); the app is named for the lake it works over."
repository = "https://github.com/mark-ik/merecat"
keywords = ["browser", "graph", "workspace", "canvas"]
categories = ["gui"]

[[bin]]
name = "merecat"
path = "src/main.rs"

[dependencies]
# The library this app is the reference host for: graph truth + the
# composition tier, consumed through the `mere` facade (kernel, orrery,
# forme, platen, glossary, ...). Git sibling per workspace convention; a
# local checkout is picked up via the gitignored `.cargo/config.toml`
# patches (mirrors mere's own sibling handling). The facade's orrery/platen
# re-exports are compatibility scaffolding: those surfaces move INTO this
# repo as the port proceeds (boundary pass plan, 2026-07-09).
mere = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
# The fetch actor (armillary + netfetcher/errand + the cookie jar): merecat's
# web lane, consumed as an individual crate from mere's workspace while it
# still lives there — per the boundary pass, fetch is app-side material that
# moves into this repo with the port.
fetch = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
# Session persistence: the flat single-session `graph.json` beside the data
# root (session_graph_store's blessed single-session shape). App-side
# material that moves here with the port, like fetch.
session-runtime = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
# The actor-kernel runtime: the physics + fetch actors wake this shell's
# event loop through an `armillary::Wake`.
armillary = { git = "https://github.com/mark-ik/armillary.git", branch = "main" }
# The per-user data root (`<data_dir>/merecat`), MERECAT_ROOT-overridable for
# scratch profiles (the meerkat MERE_ROOT convention).
dirs = "6"
# Render-free static-parse page extraction: the fetched body's `<title>`
# (and later description/OpenGraph) enriches the page's graph node.
# The engine contracts + the content lanes as session engines (session-engines
# plan phase 4: merecat's content port spawns through the registry; the static
# lane's netfetch feature gives LocalFetcher its https branch).
inker = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
serval-documents = { git = "https://github.com/mark-ik/serval.git", branch = "main", features = ["netfetch"] }
serval-extract = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
serval-static-dom = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
# `linked_icon_href` (the page's declared `<link rel=icon>`) + image decode
# for the fetched favicon bytes the canvas face paints; also the chrome
# layer's layout engine (the omnibar document).
serval-layout = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
# The chrome layer's document substrate + name types + paint vocabulary
# (rung 3: the omnibar is merecat's first DOM surface, composited above the
# canvas by the layered present).
serval-scripted-dom = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
layout-dom-api = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
paint_list_api = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_render = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
# Suggestion rows key node identity by the graph's stable UUIDs.
uuid = "1"
# Resolve a declared icon href (or the /favicon.ico fallback) against the page URL.
url = "2.5"
# Rasterize + composite the orrery's Scene through the shared present stack.
netrender = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
serval-winit-host = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
# Pins match mere's workspace so the shared subtrees unify.
winit = "0.30.13"
# PNG encode for the scenario lane's GPU self-capture (composed-frame
# readback -> receipt).
image = { version = "0.25", default-features = false, features = ["png"] }
wgpu = { version = "29", default-features = false, features = ["std", "wgsl"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Registry patches mirrored from mere's workspace manifest: a `[patch]` lives
# in the top-level manifest of whoever builds, so a standalone consumer of
# mere must restate them. Branch-tracked owned forks, never revs; no local
# paths in this committed manifest, so it compiles anywhere.
[patch.crates-io]
# NO stylo/stylo_atoms patch (2026-07-12, mirroring serval's ring-3 rename):
# the fork is now the RENAMED `serval-stylo` family, and a `[patch]` cannot
# rename its target. Serval's crates git-dep serval-stylo by package rename, so
# no crates.io `stylo` is left to patch — and keeping the old entries pulled the
# pre-rename fork in beside serval-stylo, which `links = "servo_style_crate"`
# (one Stylo per graph) makes a hard resolution error.
#
# stylo_taffy must be patched for the same reason: the registry copy names
# crates.io stylo, dragging a second Stylo in. Serval vendors one that git-deps
# serval-stylo. See serval's 2026-07-12 ring-3 fork-rename plan.
stylo_taffy = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
# serval-layout requires serval's vendored taffy fork (float-layout patches on
# stable 0.12.1), not on crates.io.
taffy = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
# ipc-channel: in-process fork vendored in serval (single-process default,
# unifies gpu-allocator's windows pin with wgpu-hal's).
ipc-channel = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
