# Root package + workspace: `crates/frisket` joined at meerkat's deletion
# (2026-07-18) — a same-repo path member, so the committed manifest still
# carries no cross-repo local paths.
[workspace]
members = ["crates/frisket"]

[package]
name = "merecat"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The cat that lives on the mere: a graph-workspace browser and reference host for the mere library. Merecat is the English calque of meerkat (Dutch meer + kat, lake-cat); the app is named for the lake it works over."
repository = "https://github.com/mark-ik/merecat"
keywords = ["browser", "graph", "workspace", "canvas"]
categories = ["gui"]

[[bin]]
name = "merecat"
path = "src/main.rs"

[dependencies]
# The library this app is the reference host for: graph truth + the
# composition tier, consumed through the `mere` facade (kernel, canvas,
# forme, platen, glossary, ...). Git sibling per workspace convention; a
# local checkout is picked up via the gitignored `.cargo/config.toml`
# patches (mirrors mere's own sibling handling). Of the facade's twelve
# re-exports only two are compatibility scaffolding, `platen` and
# `workbench`: those move INTO this repo as the port proceeds. Canvas
# STAYS in mere (the 2026-07-09 amendment reversed its move); the crate
# was called `orrery` at merecat's founding. Boundary pass plan, 2026-07-09.
mere = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
# The fetch actor (armillary + netfetcher/errand + the cookie jar): merecat's
# web lane, consumed as an individual crate from mere's workspace while it
# still lives there — per the boundary pass, fetch is app-side material that
# moves into this repo with the port.
fetch = { package = "mere-fetch", git = "https://github.com/mark-ik/mere.git", branch = "main" }
# Session persistence: the flat single-session `graph.json` beside the data
# root (session_graph_store's blessed single-session shape). App-side
# material that moves here with the port, like fetch.
session-runtime = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
# The pane model (rung 5 slice C): FrisketLayout, PaneContent, the PaneNode
# split tree — HOME since meerkat's deletion (2026-07-18): a workspace member
# of this repo, per the 2026-07-14 destination decision (its PaneContent
# names merecat's panes). Carries the frame.json store as `frisket::store`.
frisket = { path = "crates/frisket" }
# The a11y/automation tree vocabulary (rung 5 slice F): UxTree + stitch +
# stable path-derived ids. Not facade-re-exported by mere (a named facade
# gap), so a direct git dep like frisket.
uxtree = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
# Navigation vocabulary (the r3-owed Back/Forward/Reload): chrome's History
# is the cursor over visited addresses. Not facade-re-exported; direct dep
# like frisket and uxtree.
chrome = { package = "mere-chrome", git = "https://github.com/mark-ik/mere.git", branch = "main" }
# AccessKit node vocabulary for the projection (matches mere's 0.24 pin).
accesskit = "0.24"
# The actor-kernel runtime: the physics + fetch actors wake this shell's
# event loop through an `armillary::Wake`.
armillary = { git = "https://github.com/mark-ik/armillary.git", branch = "main" }
# The per-user data root (`<data_dir>/merecat`), MERECAT_ROOT-overridable for
# scratch profiles (the meerkat MERE_ROOT convention).
dirs = "6"
# Render-free static-parse page extraction: the fetched body's `<title>`
# (and later description/OpenGraph) enriches the page's graph node.
# The engine contracts + the content lanes as session engines (session-engines
# plan phase 4: merecat's content port spawns through the registry; the static
# lane's netfetch feature gives LocalFetcher its https branch).
inker = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-documents = { git = "https://github.com/mark-ik/genet.git", branch = "main", features = ["netfetch", "livery"] }
# Optional app-control scripting. Piccolo is a Merecat mod/workflow backend,
# not a browser-page engine; Vano/Boa remain the JavaScript lanes.
script-engine-api = { git = "https://github.com/mark-ik/genet.git", branch = "main", optional = true }
script-engine-piccolo = { git = "https://github.com/mark-ik/genet.git", branch = "main", optional = true }
genet-extract = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-static-dom = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
# `linked_icon_href` (the page's declared `<link rel=icon>`) + image decode
# for the fetched favicon bytes the canvas face paints; also the chrome
# layer's layout engine (the omnibar document).
genet-layout = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
# The chrome layer's document substrate + name types + paint vocabulary
# (rung 3: the omnibar is merecat's first DOM surface, composited above the
# canvas by the layered present).
genet-scripted-dom = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-probe = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
layout-dom-api = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
paint_list_api = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_render = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
# Suggestion rows key node identity by the graph's stable UUIDs.
uuid = "1"
# Resolve a declared icon href (or the /favicon.ico fallback) against the page URL.
url = "2.5"
# Rasterize + composite the canvas Scene through the shared present stack.
netrender = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
genet-winit-host = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
# The view toolkit (rung 5 slice D, the toolkit adoption): cambium (the xilem
# fork) + sprigging (its custom-paint leaves, incl. the data_grid and GraphCanvas
# a Roster grid and a Gloss minimap swatch need). Git dep on cambium.git so the
# gitignored local patch applies, like genet. Rung 3's hand-built ScriptedDom
# chrome migrates onto this over time; panes that need a grid or a paint leaf
# adopt it first.
cambium = { git = "https://github.com/mark-ik/cambium.git", branch = "main" }
sprigging = { git = "https://github.com/mark-ik/cambium.git", branch = "main" }
# The tile CONTRACT (rung 5 slice E): platen's split_beside_axis takes pelt's
# SplitAxis, so the edge-drop gesture names it. Already in the lock through
# platen; this names it (the supply plan's one-dep-line precedent).
pelt-core = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
# Pins match mere's workspace so the shared subtrees unify.
winit = "0.30.13"
# PNG encode for the scenario lane's GPU self-capture (composed-frame
# readback -> receipt).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# The dropped-sprite data-URI (file drop -> node face).
base64 = "0.22"
wgpu = { version = "29", default-features = false, features = ["std", "wgsl"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { version = "1", optional = true }

[features]
default = []
# Piccolo drives Merecat's capability-scoped control scripts. It is kept
# opt-in so the browser host's ordinary build carries no scripting runtime.
piccolo = ["dep:script-engine-api", "dep:script-engine-piccolo", "dep:serde_json"]

# Registry patches mirrored from mere's workspace manifest: a `[patch]` lives
# in the top-level manifest of whoever builds, so a standalone consumer of
# mere must restate them. Branch-tracked owned forks, never revs; no local
# paths in this committed manifest, so it compiles anywhere.
[patch.crates-io]
# NO stylo/stylo_atoms patch (2026-07-12, mirroring genet's ring-3 rename):
# the fork is now the RENAMED `genet-stylo` family, and a `[patch]` cannot
# rename its target. Genet's crates git-dep genet-stylo by package rename, so
# no crates.io `stylo` is left to patch — and keeping the old entries pulled the
# pre-rename fork in beside genet-stylo, which `links = "servo_style_crate"`
# (one Stylo per graph) makes a hard resolution error.
#
# stylo_taffy must be patched for the same reason: the registry copy names
# crates.io stylo, dragging a second Stylo in. Genet vendors one that git-deps
# genet-stylo. See genet's 2026-07-12 ring-3 fork-rename plan.
stylo_taffy = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
# genet-layout requires genet's vendored taffy fork (float-layout patches on
# stable 0.12.1), not on crates.io.
taffy = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
# ipc-channel: in-process fork vendored in genet (single-process default,
# unifies gpu-allocator's windows pin with wgpu-hal's).
ipc-channel = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
